2011-08-30  Paul Eggert  <eggert@cs.ucla.edu>

	* configure.in (opsys): Change pattern to *-*-linux*
	to recognize powerpc-gnu-linux-uclibc (Bug#9403).
	Remove unreachable pattern hppa*-*-linux-gnu*.
	Also, remove ia64*-hp-hpux1[1-9]*, as it also sets machine=hp800,
	and that can't possibly work now that src/m/hp800.h no longer exists.

2011-08-26  Jan Djärv  <jan.h.d@swipnet.se>

	* configure.in: Add -MP to DEPFLAGS (Bug#9372).

2011-08-13  Jan Djärv  <jan.h.d@swipnet.se>

	* configure.in: Add header check: sys/socket.h (Bug#8477),
	ifaddrs.h, net/if_dl.h.  Check for getifaddrs and freeifaddrs.
	Check for sa_len in struct ifreq.ifr_addr (Bug#8477).

2011-08-04  Jan Djärv  <jan.h.d@swipnet.se>

	* configure.in (HAVE_PTHREAD): Add check for -lpthread (Bug#9216).
	(HAVE_GTK_AND_PTHREAD): Remove.

2011-07-28  Alp Aker  <alp.tekin.aker@gmail.com>

	* configure.in (HAVE_RSVG): Allow use of -lrsvg-2 for any NextStep
	build, not just GNUstep (Bug#9177).

2011-07-28  Paul Eggert  <eggert@cs.ucla.edu>

	Assume freestanding C89 headers, string.h, stdlib.h.
	Again, this simplifies the code, and all current platforms have these.
	* configure.in (AC_CHECK_HEADERS): Don't check for limits.h.
	(AC_HEADER_STDC): Remove.
	(AC_CHECK_FUNCS): No need to check for strchr, strrchr.
	(strchr, strrchr): Remove fallback macros.

	Assume support for memcmp, memcpy, memmove, memset.
	This simplifies the code a bit.  All current platforms have these,
	as they are required for C89.  If this turns into a problem we
	can add the gnulib modules for these (a 1-line change to Makefile.in).
	* configure.in: Don't check for memcmp, memcpy, memmove, memset.

2011-07-27  Paul Eggert  <eggert@cs.ucla.edu>

	* GNUmakefile: New file.
	This is for convenience, so that one can run GNU make in an
	unconfigured source tree, and get a default build.

2011-07-13  Jan Djärv  <jan.h.d@swipnet.se>

	* configure.in (GSETTINGS): Check for gio-2.0 >= 2.26.
